--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <link href='//fonts.googleapis.com/css?family=Imprima' rel='stylesheet' type='text/css'>
   <link href="/css/normalize.min.css" rel="stylesheet" type="text/css">
   <link href="/css/default.css" rel="stylesheet" type="text/css">
+    <title>Paul's Indian Buffet</title>
 </head>
 <body>
 Hello World!
