added menu items and address

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,25 @@
   <link href="/css/normalize.min.css" rel="stylesheet" type="text/css">
   <link href="/css/default.css" rel="stylesheet" type="text/css">
     <title>Paul's Indian Buffet</title>
+
 </head>
 <body>
+<header><h1>Paul's Indian Buffet</h1></header>
 Hello World!
 This is our first food app! Enjoy!
+<main>
+<p>Locavore retro plaid, scenester lo-fi cornhole gentrify direct trade trust fund deep v sustainable Vice beard. Keffiyeh squid stumptown, Pinterest +1 direct trade church-key retro bitters swag synth biodiesel raw denim pop-up slow-carb. Forage fashion axe raw denim whatever, Pinterest fingerstache High Life distillery Carles mixtape chambray. Plaid Tonx fashion axe, vegan meh post-ironic fanny pack ennui. Pork belly Pitchfork ugh literally, mixtape hashtag cliche lomo dreamcatcher put a bird on it polaroid craft beer authentic YOLO. Portland craft beer DIY chillwave, synth chia plaid jean shorts tousled gentrify American Apparel yr. Church-key art party butcher, keffiyeh bicycle rights ethnic Intelligentsia Portland McSweeney's.</p>
+<p>Pork belly Shoreditch synth, sriracha 8-bit ugh polaroid Austin Marfa. PBR&B Bushwick biodiesel cred. Church-key tofu trust fund put a bird on it wayfarers before they sold out, cliche artisan Banksy. Cray tofu Etsy semiotics raw denim. Fanny pack church-key mumblecore, occupy chambray McSweeney's Bushwick narwhal master cleanse ethnic hoodie aesthetic food truck fingerstache. Dreamcatcher fashion axe ennui raw denim. Bespoke irony semiotics, whatever bicycle rights 3 wolf moon synth farm-to-table trust fund yr messenger bag.</p>
+   <ul>
+       <li>Tandori Chicken</li>
+       <li>Chicken Tikka</li>
+       <li>Lamb Chops</li>
+       <li>Fish Tandori</li>
+       <li>Tandori Mix Grill</li>
+   </ul>
+    </main>
+<footer>
+    <address>1035 Pearl St, Boulder, CO 80304</address>
+</footer>
 </body>
 </html>
