added contact us link

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@ This is our first food app! Enjoy!
     </main>
 <footer>
     <address>1035 Pearl St, Boulder, CO 80304</address>
+    <a href="mailto:india@email.com">Contact Us</a>
 </footer>
 </body>
 </html>
