--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,8 @@ This is our first food app! Enjoy!
 <main>
 <p>Locavore retro plaid, scenester lo-fi cornhole gentrify direct trade trust fund deep v sustainable Vice beard. Keffiyeh squid stumptown, Pinterest +1 direct trade church-key retro bitters swag synth biodiesel raw denim pop-up slow-carb. Forage fashion axe raw denim whatever, Pinterest fingerstache High Life distillery Carles mixtape chambray. Plaid Tonx fashion axe, vegan meh post-ironic fanny pack ennui. Pork belly Pitchfork ugh literally, mixtape hashtag cliche lomo dreamcatcher put a bird on it polaroid craft beer authentic YOLO. Portland craft beer DIY chillwave, synth chia plaid jean shorts tousled gentrify American Apparel yr. Church-key art party butcher, keffiyeh bicycle rights ethnic Intelligentsia Portland McSweeney's.</p>
 <p>Pork belly Shoreditch synth, sriracha 8-bit ugh polaroid Austin Marfa. PBR&B Bushwick biodiesel cred. Church-key tofu trust fund put a bird on it wayfarers before they sold out, cliche artisan Banksy. Cray tofu Etsy semiotics raw denim. Fanny pack church-key mumblecore, occupy chambray McSweeney's Bushwick narwhal master cleanse ethnic hoodie aesthetic food truck fingerstache. Dreamcatcher fashion axe ennui raw denim. Bespoke irony semiotics, whatever bicycle rights 3 wolf moon synth farm-to-table trust fund yr messenger bag.</p>
-   <ul>
+   <img src="images/interior.jpeg">
+    <ul>
        <li>Tandori Chicken</li>
        <li>Chicken Tikka</li>
        <li>Lamb Chops</li>
@@ -25,6 +26,7 @@ This is our first food app! Enjoy!
 <footer>
     <address>1035 Pearl St, Boulder, CO 80304</address>
     <a href="mailto:india@email.com">Contact Us</a>
+    <small>&copy; Copyright Paul Wenig 2013</small>
 </footer>
 </body>
 </html>
